<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.TermsConditionActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <include layout="@layout/no_record_found_layout"
                android:id="@+id/noRecordLayout"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:layout_marginTop="20dp"
                android:text="TERMS AND CONDITIONS"
                android:textAlignment="center"
                android:textColor="@color/apptheme2"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="Your Application may use the Terms and Conditions given below."
                android:textAlignment="viewStart"
                android:textColor="@color/apptheme2"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/termfirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/alike"
                android:text="@string/termone"
                android:textColor="@color/black"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="USE OF CONTENT"
                android:layout_marginHorizontal="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/apptheme2"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/termtwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/alike"
                android:text="@string/termtwo"
                android:textColor="@color/black"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="ACCEPTABLE WEBSITE USE"
                android:layout_marginHorizontal="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/apptheme2"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/termthree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/alike"
                android:text="@string/termthree"
                android:textColor="@color/black"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="DISCLAIMER OF CONSEQUENTIAL DAMAGES"
                android:layout_marginHorizontal="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/apptheme2"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/termfour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/alike"
                android:text="@string/termfour"
                android:textColor="@color/black"
                android:textSize="15dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>